# sergo

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.py
src/sergo/: cli.py  connection.py  dynamic.py  errors.py  fields.py  fields.pyi  handler.py  model.py  model.pyi  pagination.py  postgres_connection.py  postgres_query.py  query.py  request.py  serializer.py  sqlite_query.py  tasks.py  utils.py  viewset.py
src/sergo/connection/: __init__.py  base.py  postgres.py  postgres_connection.py  sqlite.py  transactql.py
src/sergo/project_template/: .gitignore  runserver.py  settings.py  system.toml  system.toml.example
src/sergo/project_template/models/: models.py
src/sergo/project_template/serializers/: serializers.py
src/sergo/project_template/urls/: urls.py
src/sergo/project_template/views/: views.py
src/sergo/query/: __init__.py  base.py  base.pyi  memory.py  postgres.py  sqlite.py  transactql.py
tests/: test_dynamic.py  test_postgres.py  test_query_engine.py  test_sqlite.py  test_viewset.py
